# bevy-logic-circuit

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: component.wgsl
src/: circuit.rs  cli.rs  main.rs
src/builder/: loader_xraw.rs  mod.rs  voxel.rs
src/circuit/: base.rs  bus.rs  constant.rs  demux.rs  fixed.rs  gate.rs  input.rs  io_bus.rs  keyboard.rs  mod.rs  mux.rs  wire.rs
src/importer/: base.rs  import.rs  loader_xraw.rs  mod.rs  voxel.rs  xraw.rs
src/math/: box3i.rs  mod.rs  mod3i.rs  vec3i.rs
src/matrix/: base.rs  connectivity.rs  converter.rs  labeling.rs  matrix.rs  mod.rs  model.rs  morphology.rs  parser.rs
src/schematic/: base.rs  box3i.rs  component.rs  element.rs  material.rs  mod.rs  model.rs  schema.rs  vec3i.rs
src/voxel/: conversion.rs  matrix.rs  mod.rs  parser.rs
