[package]
name = "bevy-logic-circuit"
version = "0.0.1"
edition = "2021"
license = "Proprietary"
authors = ["Olivier Schyns"]

[dependencies]
# bevy framework
bevy  = {version="0.7.0",  features=["dynamic"]}
clap  = {version="3.1.18", features=["derive"]}
serde = {version="1.0",    features=["derive" ]}

bincode = "1.2.1"

# used to convert a matrix to a schematic
disjoint-hash-set = "1.0.0"
bit-vec  = "0.6"
fasthash = "0.4"

