[package]
name = "bevy-logic-circuit"
version = "0.0.1"
edition = "2021"
license = "Proprietary"
authors = ["Olivier Schyns"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
# bevy framework
#bevy  = {version="0.8", features=["dynamic"]}
clap  = {version="3.2", features=["derive"]}
serde = {version="1.0", features=["derive"]}

bincode = "1.3"
num     = "0.4"

# used to convert a matrix to a schematic
disjoint-hash-set = "1.0"
petgraph = "0.6"
bit-vec  = "0.6"
fasthash = "0.4"

# allow to declare global variables
once_cell = "1.16.0"

# convert voxel data into an optimized mesh of triangles
block-mesh = "0.2.0"

bevy = "0.9"
